welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:11: error: type mismatch;
 found   : Unit
 required: Int
  if (cpt == 0){
  ^